# bluer-ble-peripheral

./: Cargo.toml  README.md
examples/: bluer_echo_server.rs
src/: advertiser.rs  application_factory.rs  connection.rs  device_ident.rs  err_util.rs  event.rs  handle.rs  lib.rs  peripheral.rs  responder.rs  uuid_util.rs  writer.rs
