[package]
name = "bluer-ble-peripheral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[patch.crates-io]
ble-peripheral = { git = "https://github.com/jasta/ble-peripheral" }

[dependencies]
ble-peripheral = "*"
bluer = { version = "0.16.1", features = ["bluetoothd"] }
tokio = { version = "1.32.0", features = ["sync"] }
log = "0.4.20"
futures-util = "0.3.28"